samples/_failures_safe/1761145268_78182c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_738b2842.c: In function ‘main’:
./samples/SAFE/__tmp_738b2842.c:172:78: error: expected ‘)’ at end of input
  172 |                 printf("Invalid character: '%s'\n", tokens[token_count].value
      |                       ~                                                      ^
      |                                                                              )
./samples/SAFE/__tmp_738b2842.c:172:17: error: expected declaration or statement at end of input
  172 |                 printf("Invalid character: '%s'\n", tokens[token_count].value
      |                 ^~~~~~
./samples/SAFE/__tmp_738b2842.c:172:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_738b2842.c:172:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_738b2842.c:172:17: error: expected declaration or statement at end of input
